--- a/Myapp/Gemfile
+++ b/Myapp/Gemfile
@@ -31,7 +31,7 @@ gem "jbuilder"
 # gem "kredis"
 
 # Use Active Model has_secure_password [https://guides.rubyonrails.org/active_model_basics.html#securepassword]
-# gem "bcrypt", "~> 3.1.7"
+gem "bcrypt", "~> 3.1.7"
 
 gem 'kaminari', '~> 1.2'
 
