--- a/Myapp/package.json
+++ b/Myapp/package.json
@@ -4,14 +4,15 @@
     "@popperjs/core": "^2.11.6",
     "@rails/ujs": "^7.0.4",
     "bootstrap": "^5.2.3",
-    "bootstrap-icons": "^1.10.2",
-    "sass": "^1.56.1",
+    "bootstrap-icons": "^1.10.3",
+    "esbuild": "^0.17.4",
+    "sass": "^1.57.1",
     "turbolinks": "^5.2.0",
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.0"
   },
   "scripts": {
-    "build": "webpack --config webpack.config.js",
-    "build:css": "sass ./app/assets/stylesheets/application.bootstrap.scss:./app/assets/builds/application.css --no-source-map --load-path=node_modules"
+    "build": "esbuild app/javascript/*.* --bundle --minify --outdir=app/assets/builds --public-path=assets",
+    "build:css": "sass --style compressed ./app/assets/stylesheets/application.bootstrap.scss:./app/assets/builds/application.css --no-source-map --load-path=node_modules"
   }
 }
