--- a/Myapp/Gemfile
+++ b/Myapp/Gemfile
@@ -35,17 +35,17 @@ gem 'jbuilder'
 # Use Active Model has_secure_password [https://guides.rubyonrails.org/active_model_basics.html#securepassword]
 gem 'bcrypt', '~> 3.1.7'
 
-gem 'draper', '~> 4.0'
-gem 'pagy', '~> 4.10'
-gem 'valid_email2', '~> 4.0'
-gem 'rubyzip', '~> 2'
+gem 'activerecord-import', '~> 1.2'
 gem 'caxlsx', '~> 3.1'
 gem 'caxlsx_rails', '~> 0.6'
-gem 'rubyXL', '~> 3.4'
-gem 'activerecord-import', '~> 1.2'
-gem 'rails-i18n', '~> 7'
-gem 'lokalise_rails', '~> 2'
 gem 'dotenv-rails'
+gem 'draper', '~> 4.0'
+gem 'lokalise_rails', '~> 2'
+gem 'pagy', '~> 4.10'
+gem 'rails-i18n', '~> 7'
+gem 'rubyXL', '~> 3.4'
+gem 'rubyzip', '~> 2'
+gem 'valid_email2', '~> 4.0'
 
 # Windows does not include zoneinfo files, so bundle the tzinfo-data gem
 gem 'tzinfo-data', platforms: %i[mingw mswin x64_mingw jruby]
@@ -61,18 +61,18 @@ gem 'bootsnap', require: false
 
 group :development, :test do
   # See https://guides.rubyonrails.org/debugging_rails_applications.html#debugging-with-the-debug-gem
+  gem 'bullet'
   gem 'debug', platforms: %i[mri mingw x64_mingw]
   gem 'faker', '~> 2'
   gem 'pry-rails'
-  
 end
 
 group :development do
   # Use console on exceptions pages [https://github.com/rails/web-console]
-  gem 'web-console'
   gem 'rubocop', '~> 1.44', require: false
   gem 'rubocop-performance', '~> 1.11', require: false
   gem 'rubocop-rails', '~> 2.11', require: false
+  gem 'web-console'
 
   # Add speed badges [https://github.com/MiniProfiler/rack-mini-profiler]
   # gem "rack-mini-profiler"
