--- a/Myapp/package.json
+++ b/Myapp/package.json
@@ -6,7 +6,9 @@
     "bootstrap": "^5.2.3",
     "bootstrap-icons": "^1.10.3",
     "esbuild": "^0.17.4",
+    "jquery": "^3.6.4",
     "sass": "^1.57.1",
+    "select2": "^4.1.0-rc.0",
     "turbolinks": "^5.2.0",
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.0"
