--- a/Myapp/package.json
+++ b/Myapp/package.json
@@ -9,6 +9,7 @@
     "jquery": "^3.6.4",
     "sass": "^1.57.1",
     "select2": "^4.1.0-rc.0",
+    "select2-bootstrap-5-theme": "^1.3.0",
     "turbolinks": "^5.2.0",
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.0"
